students/StelmashukIvan/task_02/src/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app20
  labels:
    org.bstu.student.fullname: "Stelmashuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220025"
    org.bstu.group: "AS-63"
    org.bstu.variant: "20"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "KulibinI"
    org.bstu.student.slug: "as-63-220025-v20"
