students/StelmashukIvan/task_02/src/k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web20
  namespace: app20
  labels:
    app: web20
    org.bstu.student.fullname: "Stelmashuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220025"
    org.bstu.group: "AS-63"
    org.bstu.variant: "20"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "KulibinI"
    org.bstu.student.slug: "as-63-220025-v20"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web20
    spec:
      containers:
        - name: web
          image: kulibini/myapp:stu-220025-v20  # Замените на свой реестр/тег
          ports:
            - containerPort: 8054
          readinessProbe:
            httpGet:
              path: /ping
              port: 8054
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8054
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          volumeMounts:
            - name: app-data
              mountPath: /app/data
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: data-v20
