students/StelmashukIvan/task_02/src/k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: app20
  labels:
    app: postgres
    org.bstu.student.fullname: "Stelmashuk_Ivan_Aleksandrovich"
    org.bstu.student.id: "220025"
    org.bstu.group: "AS-63"
    org.bstu.variant: "20"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "KulibinI"
    org.bstu.student.slug: "as-63-220025-v20"
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
